2004-01-16  Jason Leach  <leach@wam.umd.edu>

	* libsoup/Makefile.am: builddir != srcdir fixes.

2004-01-14  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-gnutls.c (verify_certificate): Remove the
	check for GNUTLS_CERT_CORRUPTED, it's not in 1.0.x.

2004-01-12  JP Rosevear  <jpr@ximian.com>

	* configure.in: bump version and libtool revision

2004-01-12  Dan Winship  <danw@ximian.com>

	* tests/simple-httpd.c (main): Add a g_thread_init() so this works
	again.

2004-01-10  Larry Ewing  <lewing@ximian.com>

	* libsoup-2.2.pc.in (Libs): use LIBGNUTLS_LIBS in the substitution
	string.

2004-01-09  Joe Shaw  <joe@ximian.com>

	* acinclude.m4: Include the libgnutls.m4 file.

	* configure.in: Remove manual checking for libgnutls-config and
	use the AM_PATH_LIBGNUTLS so we can pass in a minimum required
	version, which is 0.9.7 for now.

	* libsoup/Makefile.am: Some changes for the above change.

	* libsoup/soup-gnutls.c: Check for HAVE_SSL, not
	HAVE_GNUTLS_GNUTLS_H.
	(verify_certificate): Uncomment the SSL certificate hostname
	check.

	* libsoup/soup-session.c (set_property): Be smart about flushing
	our SSL credentials only when the CA file is set to something
	different than it was before.

2004-01-09  Harish K <kharish@novell.com>
        * libsoup/soup-soap-response.c (soup_soap_response_from_string): 
        added code to ignore Header element, if present, while creating 
        response objects.  
        
2004-01-05  Dan Winship  <danw@ximian.com>

	* configure.in: Remove no-longer-relevant socklen_t check

	* libsoup/soup-address.c: Reorder #includes for FreeBSD (From Joe
	Marcus Clarke, #52566)

	* libsoup/soup-dns.c: Likewise

2003-12-29  JP Rosevear <jpr@ximian.com>

	* configure.in: bump version and libtool numbers

2003-12-22  Dan Winship  <danw@ximian.com>

	* README, TODO: Update these

2003-12-22  Dan Winship  <danw@ximian.com>

	* libsoup/soup-socket.c: Lots of thread-safety stuff, primarly so